# NitroCppTest-TiagoMelo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  test.sh
.github/workflows/: portability-ci.yml
include/: Application.hpp  Canvas.hpp  JsonHandler.hpp  Rectangle.hpp  RectangleIntersection.hpp  Vertex.hpp  canvas.hpp  emptyTestHeader.h  jsonHandler.hpp  rectangle.hpp  rectangleIntersection.hpp  rectangleSet.hpp  vertex.hpp
src/: Application.cpp  Canvas.cpp  JsonHandler.cpp  Main.cpp  Rectangle.cpp  RectangleIntersection.cpp  canvas.cpp  emptyTestClass.cpp  jsonHandler.cpp  main.cpp  rectangle.cpp  rectangleIntersection.cpp  rectangleSet.cpp
test/: testApplication.cpp  testCanvas.cpp  testJsonHandler.cpp  testMain.cpp  testRectangle.cpp  testRectangleIntersection.cpp  testRectangleSet.cpp
test/test_files/: test1-specification-example.json  test10-twelverectangles.json  test11-defineapoint.json  test3-invalid.json  test4-singlerect.json  test5-singlerect-missingfields.json  test6-notanarray.json  test7-keynotfound.json  test8-emptyarray.json  test9-invalidrect.json
test/test_plots/: plotter.py
